--- a/src/blocks/site-footer/site-footer.scss
+++ b/src/blocks/site-footer/site-footer.scss
@@ -1,10 +1,9 @@
 .site-footer {
+	@include padding-vertical(1rem);
 	position: relative;
-	margin-top: auto;
 	background-color: #2a2a2a;
 }
 
 .site-footer__inner {
 	@include l-wrap;
-	@include padding-vertical(1rem);
 }
