--- a/src/styles/layouts.scss
+++ b/src/styles/layouts.scss
@@ -1,6 +1,4 @@
 @mixin l-wrap {
-	display: flex;
-	flex-wrap: wrap;
 	position: relative;
 	width: 97%;
 	max-width: 1180px;
